Fixed: - export database - command positioning - subscriptions - no subscriptions was visible even when subscriptions were available - quotas: unification - versioning - not all props were copied from parent - custom functions - L&F fix - replications: SLA ms as input addon

--- a/Raven.Studio.Html5/Content/app.less
+++ b/Raven.Studio.Html5/Content/app.less
@@ -246,8 +246,6 @@ html, body {
         overflow-y: hidden;
 
         .form-group {
-            max-height: 55vh !important;
-            height: 55vh !important;
             overflow-x: hidden;
             overflow-y: auto;
         }
